Internal data:
* switchId
* list of portNumber+upState

Input signals:
* history
* online
* offline
* port-add
* port-del
* port-up
* port-down

Output signals:
* online
* offline
* setup-port
* remove-port
* port-up
* port-down

@startuml
title Switch FSM

[*] --> INIT

INIT --> OFFLINE : history / setup port workers
INIT --> SETUP : online

SETUP : enter / setup port FSM for NEW ports
SETUP : enter / emit online for ALL ports
SETUP : enter / emit port-del for REMOVED ports
SETUP : enter / emit port-down for UP->DOWN ports
SETUP : enter / emit port-up for DOWN->UP ports
SETUP -r-> ONLINE : next

ONLINE : port-add / setup port FSM
ONLINE : port-del / kill port FSM
ONLINE : port-up / proxy
ONLINE : port-down / proxy
ONLINE : enter [have BFD support] / emit FL-BFD-consumer setup
ONLINE --> OFFLINE : offline

OFFLINE : enter / emit offline for portAll()
OFFLINE --> SETUP : online
@enduml
